Update page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Project 2</title>
+		<title>CG Project 3</title>
 		<style>
 			body,
 			html {
